(4.2.5p250-RC) 2009/11/30 Released by Harlan Stenn <stenn@ntp.org>
* sntp documentation updates.
* [Bug 761] internal resolver does not seem to honor -4/-6 qualifiers
* [Bug 1386] Deferred DNS doesn't work on NetBSD
* [Bug 1391] avoid invoking autogen twice for .c and .h files.
* [Bug 1397] shmget() refclock_shm failing because of file mode.
* Pass no_needed to ntp_intres as first part of fixing [Bug 975].
* Add ./configure --enable-force-defer-DNS to help debugging.
(4.2.5p249-RC) 2009/11/28 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1400] An empty KOD DB file causes sntp to coredump.
* sntp: documentation cleanup.
* sntp: clean up some error messages.
* sntp: Use the precision to control how many offset digits are shown.
* sntp: Show root dispersion.
* Cleanup from the automake/autoconf upgrades.
(4.2.5p248-RC) 2009/11/26 Released by Harlan Stenn <stenn@ntp.org>
* Prepare for the generation of sntp.html.
* Documentation changes from Dave Mills.
* [Bug 1387] Storage leak in ntp_intres (minor).
* [Bug 1389] buffer overflow in refclock_oncore.c
* [Bug 1391] .texi usage text from installed, not built binaries.
* [Bug 1392] intres retries duplicate assocations endlessly.
* Correct *-opts.h dependency so default 'get' action isn't used.
(4.2.5p247-RC) 2009/11/20 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1142] nodebug builds shed no light on -d, -D option failure.
* [Bug 1179] point out the problem with -i/--jaildir and -u/--user when
  they are disabled by configure.
* [Bug 1308] support systems that lack fork().
* [Bug 1343] sntp doesn't link on Solaris 7, needs -lresolv.
(4.2.5p246-RC) 2009/11/17 Released by Harlan Stenn <stenn@ntp.org>
* Upgrade to autogen-5.10
* [Bug 1378] Unnecessary resetting of peers during interface update.
* [Bug 1382] p245 configure --disable-dependency-tracking won't build.
* [Bug 1384] ntpq :config core dumped with a blank password.
(4.2.5p245-RC) 2009/11/14 Released by Harlan Stenn <stenn@ntp.org>
* Cleanup from Dave Mills.